Shorten intro text.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ body_class: "home"
   <section class="intro">
     <p>
     Psychological and neuropsycholgical assessments and interventions for children
-    and young people, addressing emotional, behavioural, physical/medical and
-    learning issues.
+    and young people.
     </p>
     <img src="/images/susanna_and_aston.jpg" alt="Dr Susanna Waern and Aston">
   </section>
@@ -21,7 +20,8 @@ body_class: "home"
       <h2>Services</h2>
       <p>
       Susanna offers psychological and neuropsychological assessments and
-      interventions for children, adolescents and families.
+      interventions for children, adolescents and families, addressing
+      emotional, behavioural, physical/medical and learning issues.
       </p>
       <p class="continue-reading">
       <a href="/services">Services offered</a>
