Add "Q: " and "A: " prefixes to FAQ.

--- a/information-for-young-people.html
+++ b/information-for-young-people.html
@@ -14,7 +14,7 @@ body_class: "young-people"
   the past:
   </p>
 
-  <ul>
+  <ul class="faq">
     <li>
       <blockquote>What does a psychologist do the first time you meet?</blockquote>
 
