Replace comma with em dash.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body_class: "home"
       <h2>Services</h2>
       <p>
       Susanna offers psychological and neuropsychological assessments and
-      interventions for children, adolescents and families, addressing
+      interventions for children, adolescents and families &mdash; addressing
       emotional, behavioural, physical/medical and learning issues.
       </p>
       <p class="continue-reading">
