Update copy and add footnote style.

--- a/about.html
+++ b/about.html
@@ -10,14 +10,15 @@ body_class: "about"
 
   <p>
   Susanna completed her doctoral training in 2007 at the University of Surrey.
-  She has since worked both in Paediatrics and community Child and Adolescent
-  Mental Health Services (CAMHS). She completed her Postgraduate Diploma in
-  Paediatric Neuropsychology at University College London in 2013. She currently
-  works part-time in the NHS providing psychological and neuropsychological
-  services to children with cancer, with a specific focus on children with brain
-  tumours. Over the years, Susanna has gained significant experience of working
-  with a range of different childhood problems as well as physical health
-  problems.
+  Her training included working in both Paediatrics and community Child and
+  Adolescent Mental Health Services (CAMHS) and since qualifying, she has
+  continued working in these areas. Susanna completed her Postgraduate Diploma
+  in Paediatric Neuropsychology at University College London in 2013. She
+  currently works part-time in the NHS providing psychological and
+  neuropsychological services to children with cancer, leading on the
+  psychology service for children with brain tumours. Over the years, Susanna
+  has gained significant experience of working with a range of different
+  childhood problems as well as physical health problems.
   </p>
 
   <p>
@@ -36,14 +37,27 @@ body_class: "about"
   through further training in order to ensure that her practice is continuously
   developing. However, she is also highly conscious of the importance of the
   therapeutic relationship and her uttermost aim is to provide a child-friendly
-  service, using a range of creative ideas to engage children and young people.
+  service, whilst also acknowledging the needs of all family members. Susanna
+  is innovative in her approach and uses a range of creative ideas to engage
+  children and young people.
   </p>
 
   <p>
-  Susanna is registered with the <a href="http://www.hpc-uk.org">Health and
-  Care Professions Council</a> and is a member of the
+  Susanna is registered as a Practitioner Psychologist with the
+  <a href="http://www.hpc-uk.org">Health and Care Professions Council</a>
+  <sup><a href="#1" alt="Footnote 1">1</a></sup> (Registration no PYL22969)
+  and is a member of the
   <a href="http://www.bps.org.uk">British Psychological Society</a>, including
-  the Division for Clinical Psychology and the Faculty for Children and Young
-  People.
+  the Division for Clinical Psychology, the Faculty for Children and Young
+  People, the Division of Neuropychology and the Faculty for Paediatric
+  Neuropsychology.
+  </p>
+
+  <p class="footnote" id="1">
+  <sup>1</sup> The HCPC is the UK regulator of a number of health and care
+  professions which is set up to protect the public. Their register includes
+  professionals who meet their standards for their training, professional
+  skills, behaviour and health. Prior to consulting a psychologist, you should
+  always ensure they are registered with the HCPC (http://www.hpc-uk.org/).
   </p>
 </div>
