--- a/appointments-and-fees.html
+++ b/appointments-and-fees.html
@@ -11,7 +11,7 @@ body_class: "appointments"
   <p>Appointments are offered at two East London locations:</p>
 
   <p>
-  <em>Liverpool Street</em><br>
+  <em>Liverpool Street/Old Street</em><br>
   The Gestalt Centre<br>
   96-100 Clifton Street<br>
   London EC2A 4TP
@@ -30,9 +30,9 @@ body_class: "appointments"
   </p>
 
   <p>
-  Appointment times are available Tuesday to Saturday, day time as well as
-  evening time. Appointments via Skype or telephone consultations can also be
-  arranged.
+  Appointment times are generally available Thursday, Friday and Saturday, in
+  the day as well as the evenings. Appointments via Skype or telephone
+  consultations can also be arranged.
   </p>
 
   <h2>Fees</h2>
@@ -42,12 +42,6 @@ body_class: "appointments"
   requested. Discounts are available for people who commit to an agreed block of
   sessions and for Skype appointments. Please contact Susanna for more
   information about fees.
-  </p>
-
-  <p>
-  Sessions cancelled less than 24 hours in advance will be charged at 100%.
-  Sessions cancelled between 24 and 48 hours in advance will be charged at 50%.
-  Sessions cancelled with more than 48 hours notice will not be charged for.
   </p>
 
   <p>
