--- a/information-for-young-people.html
+++ b/information-for-young-people.html
@@ -8,10 +8,11 @@ body_class: "young-people"
 
   <p>
   Have you ever met a psychologist before? Most people I meet haven't seen a
-  psychologist and they all have different ideas of what it is going to be like.
-  Some people may feel worried about coming and are angry with their parents for
-  making them come. Here are some common questions that people have asked me in
-  the past:
+  psychologist and they all have different ideas of what it is going to be
+  like.  Some people may feel worried about coming and are angry with their
+  parents for making them come and it can help if you know what will happen in
+  the session. Here are some common questions that people have asked me in the
+  past:
   </p>
 
   <ul class="faq">
@@ -47,8 +48,8 @@ body_class: "young-people"
       <blockquote>Can psychologists read thoughts?</blockquote>
 
       <p>
-      No, psychologists can't read thoughts but we are good at working out how
-      problems have started and what people do to maintain the problem.
+      No, psychologists can't read thoughts but we are good at asking the right
+      questions so that we together can worki out how to resolve your problems.
       </p>
     </li>
 
@@ -56,14 +57,14 @@ body_class: "young-people"
       <blockquote>How can talking about my problems help?</blockquote>
 
       <p>
-      Some people say that just talking about your problem with someone who can take
-      a more objective view of the situation helps them think differently about their
-      problem. Other people want a bit more help and that is why psychologists are
-      trained in different therapies that have different ways of addressing problems.
-      And although we may not be able to change what is going on for you (for
-      example, parents divorcing or having a chronic illness), we can help making the
-      experience less stressful and help you get on with your life and achieve your
-      goals in other areas.
+      Some people say that just talking about your problem with someone who can
+      take an objective view helps them think differently about their problem.
+      Other people want a bit more help and strategies and that is why
+      psychologists are trained in different therapies that have different ways
+      of addressing problems. And although we may not be able to change what
+      is going on for you (for example, parents divorcing or having a chronic
+      illness), we can help making the experience less stressful and help you
+      get on with your life and achieve your goals in other areas.
       </p>
     </li>
 
@@ -71,17 +72,17 @@ body_class: "young-people"
       <blockquote>Will you tell my parents what we talk about?</blockquote>
 
       <p>
-      Psychological therapy is confidential. This means that unless agreed, I will
-      not tell your parents what you have told me. However, it is often useful for
-      parents to know a bit about what we discuss to ensure that everyone in the
-      family does what they can to help changing the situation. It is up to you what
-      you want to tell your parents and if you are not comfortable telling them
-      outside the therapy, we can do it together. There is also one exception to
-      confidentiality, which is if you would tell me something that means that you or
-      someone else is at risk. For example, you may have thoughts of harming
-      yourself, or an adult may have done something that is regarded as abuse. In
-      these kinds of situations, I need to ensure that you are not harmed by telling
-      the people who can keep you safe.
+      Psychological therapy is confidential. This means that unless agreed, I
+      will not tell your parents what you have told me. However, it is often
+      useful for parents to know a bit about what we discuss to ensure that
+      everyone in the family does what they can to help changing the situation,
+      but it is up to you what you want to tell your parents. There is one
+      exception to confidentiality, which is if you would tell me something
+      that means that you or someone else is at risk. For example, you may have
+      thoughts of harming yourself, or an adult may have done something that is
+      regarded as abuse. In these situations, I would need to tell the people
+      who can keep you safe (most often your parents) to make sure you are not
+      harmed.
       </p>
     </li>
   </ul>
