--- a/services/assessments.html
+++ b/services/assessments.html
@@ -7,10 +7,22 @@ body_class: "services assessments"
 
 <p>
 A psychological assessment focuses on understanding how a problem developed,
-what maintains it and helps inform a plan of how to deal with the problem.
-Whilst an assessment can be diagnostic (for example, diagnosing depression),
-Psychologists are generally less concerned with diagnosis and instead
-specialises in finding an individual explanation for every person. This means
-that an individual treatment plan can be developed and the problem can still be
-addressed even if it does not fit the criteria for a specific diagnosis.
+what maintains it. It also looks at any exceptions to the problem and what
+children and parents have tried in order to deal with the problem. This
+information contributes to a plan (a so called formulation) of how to deal with
+the problem (the intervention, or therapy).  Whilst an assessment can be
+diagnostic (for example, diagnosing depression), Psychologists are generally
+less concerned with diagnosis and instead specialises in finding an individual
+formulation for every person. This means that an individual treatment plan can
+be developed and a problem can still be addressed even if it does not fit the
+criteria for a specific diagnosis. Any psychological intervention will start
+with an assessment, although the duration of the assessment will vary depending
+on the complexity and the duration of the problem.
+</p>
+
+<p>
+Since qualifying as a Clinical Psychologist, Susanna has conducted assessments
+of a range of different emotional and behavioural problems, as well as
+developmental disorders, such as ADHD and Autism Spectrum Disorder (ASD) in the
+NHS as well as in the private sector.
 </p>
