--- a/services/consultation-and-teaching.html
+++ b/services/consultation-and-teaching.html
@@ -32,3 +32,10 @@ psychology, paediatric neuropsychology, child development, emotional and
 behavioural problems in childhood, therapies for children and stress
 management.
 </p>
+
+<p>
+Susanna has several years experience of providing consultation and teaching to
+a range of different professionals and institutions, including lecturing on
+topics such as Paediatric Psychology and Child Cognitive Development at
+University College London.
+</p>
