--- a/services/neuropsychology.html
+++ b/services/neuropsychology.html
@@ -8,26 +8,25 @@ body_class: "services neuropsychology"
 <h2>Neuropsychological assessment</h2>
 
 <p>
-A neuropsychological assessment is concerned with brain functions that affect
-learning and academic progress. Neuropsychological assessments are particularly
-important for children who have suffered from an acquired brain injury, such as
-a brain tumour, stroke or a brain injury following an accident, or who have a
-medical condition that affects the brain, for example, epilepsy. However,
-children without an obvious brain injury can also struggle in school and a
-neuropsychological assessment can establish whether this is due to a problem
-with the function of the brain, or whether it is due to psychosocial factors
-such as anxiety, pain or
+A neuropsychological assessment can focus on a range of different functions of
+the brain that can affect learning and academic progress, as well as every day
+living skills. This includes areas such as memory, planning and organising
+work, speed of processing and attention. An assessment establishes a child’s
+strengths and weaknesses and the assessment report contains recommendations for
+the family and for school. Sometimes the words “cognitive assessments” and
+“neuropsychological assessments” are used interchangeably. A cognitive
+assessment is an assessment of general intellectual functioning (or IQ), which
+includes verbal and perceptual skills, and is an important part of a
+neuropsychological assessment.
 </p>
 
 <p>
-A neuropsychological assessment can focus on a range of different functions of
-the brain, such as memory, planning and organising work, and attention,
-depending on the problem experienced. An assessment establishes a child's
-strengths and weaknesses and the assessment report contains recommendations for
-the family and for school. Sometimes the words "cognitive assessments" and
-"neuropsychological assessments" are used interchangeably. A cognitive
-assessment is an assessment of general intellectual functioning (IQ) and is an
-important part of a neuropsychological assessment.
+Neuropsychological assessments are particularly important for children who have
+suffered from injuries and illnesses that affect the brain, such as a brain
+tumour, stroke, cerebral palsy, brain injury following an accidenta and
+epilepsy. However, children without brain injury can also struggle in school
+and a neuropsychological assessment can help establishing whether the child has
+any underlying cognitive difficulties that affect their academic progress.
 </p>
 
 <h2>Neuropsychological intervention</h2>
@@ -39,6 +38,18 @@ and provide recommendations that can help the child's academic progress. It can
 also include education for the family about the strengths and weakness of the
 child, specific parenting skills for children with an acquired brain injury,
 teaching the child strategies that can help academic progress, and discussion
-about external tools and devices that can support the child's learning.
+about external tools and devices that can support the child's learning. How the
+family function together is also known to be an important factor in how well a
+child manages after a brain injury, and as a result, family interventions are
+also offered.
+</p>
+
+<p>
+Susanna has completed post-doctoral training in neuropsychology and has many
+years experience of working with children with neuropsychological issues, both
+in terms of assessments as well as providing long-term interventions and
+support for the whole family. Her experience includes working with children
+with brain tumours, stroke, epilepsy, cerebral palsy, and traumatic brain
+injuries (for example, following road traffic accidents).
 </p>
 
