--- a/services/paediatrics.html
+++ b/services/paediatrics.html
@@ -21,14 +21,14 @@ Having a child with a chronic illness affects the whole family. It can be
 difficult as a parent to maintain the rules and boundaries you would normally
 have at home and this can lead to behavioural problems and conflict.
 Relationships between siblings can also become strained, with any siblings who
-are not unwell feeling left out and sidelined. As a result, Susanna offers
-parenting work and therapy with siblings.
+are not unwell feeling left out and sidelined. As a result, parenting work and
+therapy with siblings is also offered.
 </p>
 
 <p>
 Susanna has extensive experience of working with children and young adults with
 a range of different medical conditions, including cancer, diabetes, epilepsy,
-brain injuries, cerebral palsy, sickle cell disease and cystic fibrosis. She
-has also worked for many years with siblings and parents of children with
+brain injuries, cerebral palsy, sickle cell disease and cystic fibrosis. Her
+experience also includes working with siblings and parents of children with
 chronic illness.
 </p>
