--- a/services/parenting.html
+++ b/services/parenting.html
@@ -6,14 +6,23 @@ body_class: "services parenting"
 <h1>Parenting</h1>
 
 <p>
-Being a parent can be very stressful and especially if your child has a
-physical illness or special needs. Parenting sessions focus on understanding
-the meaning of your child's behaviour and finding strategies that can improve
-difficult behaviour. It focuses on building a relationship between a child and
-a parent that focuses on positive interactions.
+Being a parent can be very stressful, especially if your child has a physical
+illness or special needs. Parenting sessions focus on understanding the meaning
+of your child's behaviour, what may influence it, and on finding strategies
+that can improve difficult behaviour. It focuses on empowering the parents and
+building a relationship between a child and a parent that is based on positive
+interactions.
 </p>
 
 <p>
 Depending on the age of your child, your child may have their own therapy in
 conjunction with parenting sessions and some sessions may be done jointly.
+</p>
+
+<p>
+Susanna has extensive experience of working with parents and understands the
+dilemmas parents may come across when trying to challenge their children’s
+behaviour. Her approach is based on behavioural principles and well-researched
+strategies, and she also acknowledges that when the parent lacks confidence in
+their parenting, these strategies are less likely to succeed.
 </p>
