--- a/services/therapies.html
+++ b/services/therapies.html
@@ -7,9 +7,9 @@ body_class: "services therapies"
 
 <p>
 Psychological therapies can be helpful for a range of different emotional and
-behavioural problems. Common problems include anxiety, phobias, low mood, Post
-Traumatic Stress Disorder (PTSD), low self-esteem, anger, self-harm and
-bereavement.
+behavioural problems. Common psychological problems include anxiety, phobias,
+low mood, Post Traumatic Stress Disorder (PTSD), low self-esteem, anger,
+self-harm and bereavement.
 </p>
 
 <p>
@@ -17,8 +17,8 @@ Psychological therapy can also address a range of different issues related to
 living with a physical health condition, such as accepting a diagnosis,
 adherence to medical treatment, and pain management. Therapy will be adapted
 according to the child age and level of cognitive function. The decision which
-therapy to use is made based on the presenting problem, the evidence base and
-the preferences of the family.
+therapy to use is made based on the presenting problem, the evidence base for a
+particular therapy for a particular problem and the preferences of the family.
 </p>
 
 <h2>Cognitive Behaviour Therapy (CBT)</h2>
@@ -27,7 +27,7 @@ the preferences of the family.
 CBT looks at how your thoughts and behaviours influence the way you feel. By
 changing the way you think and how you act in certain situations, it can
 influence the way you feel. CBT focuses primarily on problems and difficulties
-in the here and now, although it will take into account events that have led to
+in the here and now, although it will take into account past events that have led to
 the current difficulties.
 </p>
 
@@ -50,10 +50,13 @@ turn influence the problem.
 <h2>Acceptance and Commitment Therapy (ACT)</h2>
 
 <p>
-ACT is a form of cognitive therapy which focuses on accepting what is out of
-your personal control and committing to taking action that enriches your life.
-ACT emphasises the importance of living mindfully (see below for more
-information about Mindfulness).
+ACT is a form of cognitive therapy which instead of challenging negative
+thoughts (as in traditional CBT) focuses on accepting that difficult feelings
+and thoughts will be part of peoples’ lives. By learning to stop struggling
+with these thoughts and feelings, they will become less influential and frees
+people up to focus on their values in life and on taking positive action
+despite their difficulties. ACT also emphasises the importance of living
+mindfully (see below for more information about Mindfulness).
 </p>
 
 <p>
@@ -74,13 +77,25 @@ experiences, thoughts and feelings.
 <h2>Bereavement</h2>
 
 <p>
-There is no such thing as a 'normal' bereavement and most children or young
-people who go through a bereavement do not need professional input. However, if
-the child has strong reactions that continue over time (including drastic
-behaviour changes), school performance is seriously affected, and the child or
-young people isolate themselves from family and friends, bereavement therapy
-can be of benefit.  In cases where the child is bereaved by suicide or murder,
-the child has witnessed the death, or the child had responsibility for the
-death or responsibility for the dead person, early professional contact is
-recommended.
+Most children and young people who go through a bereavement do not need
+professional input. There is no such thing as a ‘normal’ bereavement and
+children will react differently to a loss. However, if the child has strong
+reactions that continue over time (including drastic behaviour changes), school
+performance is seriously affected, and the child or young people isolate
+themselves from family and friends, bereavement therapy can be of benefit. In
+cases where the child is bereaved by suicide or murder, the child has witnessed
+the death, or the child had responsibility for the death or responsibility for
+the dead person, early professional contact is recommended.
+</p>
+
+<p>
+Susanna has substantial training and experience in CBT and of adapting this to
+the child’s age or cognitive function. She has successfully used CBT approaches
+with children presenting with a range of different emotional and behavioural
+difficulties, including low self esteem, anxiety, low mood and anger. She has
+developed her practice in line with new evidence bases and as such incorporates
+Mindfulness and ACT into her work. Since a child is inevitably affected by the
+context in which they are living, Susanna will always incorporate systemic
+therapy elements into her interventions. Her current work with children with
+cancer means that she regularly meets bereaved children and adults.
 </p>
