Links have titles, not alts.

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ body_class: "about"
   <p>
   Susanna is registered as a Practitioner Psychologist with the
   <a href="http://www.hpc-uk.org">Health and Care Professions Council</a>
-  <sup><a href="#1" alt="Footnote 1">1</a></sup> (Registration no PYL22969)
+  <sup><a href="#1" title="Footnote 1">1</a></sup> (Registration no PYL22969)
   and is a member of the
   <a href="http://www.bps.org.uk">British Psychological Society</a>, including
   the Division for Clinical Psychology, the Faculty for Children and Young
