Correct intro text spelling.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ body_class: "home"
 <div class="wrapper">
   <section class="intro">
     <p>
-    Psychological and neuropsycholgical assessments and interventions for children
-    and young people.
+    Psychological and neuropsychological assessments and interventions for
+    children and young people.
     </p>
     <img src="/images/susanna_and_aston.jpg" alt="Dr Susanna Waern and Aston">
   </section>
