--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@ body_class: "about"
   </p>
 
   <p>
-  Susanna is committed to providing a evidence-based service and since
+  Susanna is committed to providing an evidence-based service and since
   qualifying, she has kept abreast with new research and developed new skills
   through further training in order to ensure that her practice is continuously
   developing. However, she is also highly conscious of the importance of the
