--- a/information-for-young-people.html
+++ b/information-for-young-people.html
@@ -9,8 +9,8 @@ body_class: "young-people"
   <p>
   Have you ever met a psychologist before? Most people I meet haven't seen a
   psychologist and they all have different ideas of what it is going to be
-  like.  Some people may feel worried about coming and are angry with their
-  parents for making them come and it can help if you know what will happen in
+  like.  Some people may feel worried about coming and may be angry with their
+  parents for making them go and it can help if you know what will happen in
   the session. Here are some common questions that people have asked me in the
   past:
   </p>
@@ -49,7 +49,7 @@ body_class: "young-people"
 
       <p>
       No, psychologists can't read thoughts but we are good at asking the right
-      questions so that we together can worki out how to resolve your problems.
+      questions so that we together can work out how to resolve your problems.
       </p>
     </li>
 
