--- a/resources-and-links.html
+++ b/resources-and-links.html
@@ -9,7 +9,7 @@ body_class: "resources"
   <h2>Information about psychological problems</h2>
 
   <p>
-  <a href="http://www.rcpsych.ac.uk/expertadvice/youthinfo/mhgpfactsheetsindex.aspx">
+  <a href="http://www.rcpsych.ac.uk/expertadvice/youthinfo/mhgpfactsheetsindex.aspx" target="_blank">
     http://www.rcpsych.ac.uk/expertadvice/youthinfo/mhgpfactsheetsindex.aspx
   </a>
   </p>
@@ -22,7 +22,7 @@ body_class: "resources"
   <h2>Bereavement</h2>
 
   <p>
-  <a href="http://www.hospicenet.org/html/younger.html">
+  <a href="http://www.hospicenet.org/html/younger.html" target="_blank">
     http://www.hospicenet.org/html/younger.html
   </a>
   </p>
@@ -33,7 +33,7 @@ body_class: "resources"
   </p>
 
   <p>
-  <a href="http://www.riprap.org.uk/support/advice/">
+  <a href="http://www.riprap.org.uk/support/advice/" target="_blank">
     http://www.riprap.org.uk/support/advice/
   </a>
   </p>
@@ -45,18 +45,18 @@ body_class: "resources"
   <h2>Brain injury</h2>
 
   <p>
-  <a href="http://childbraininjurytrust.org.uk/">
+  <a href="http://childbraininjurytrust.org.uk/" target="_blank">
     http://childbraininjurytrust.org.uk/
   </a>
   </p>
 
   <p>
-  The Brain Injury Trust is a charity that supports children, young people and
-  families who have suffered an acquired brain injury.
+  The Child Brain Injury Trust is a charity that supports children, young
+  people and families who have suffered an acquired brain injury.
   </p>
 
   <p>
-  <a href="http://www.braininjuryhub.co.uk/">
+  <a href="http://www.braininjuryhub.co.uk/" target="_blank">
     http://www.braininjuryhub.co.uk/
   </a>
   </p>
@@ -69,7 +69,7 @@ body_class: "resources"
   <h2>Disfigurement</h2>
 
   <p>
-  <a href="https://www.changingfaces.org.uk/Home">
+  <a href="https://www.changingfaces.org.uk/Home" target="_blank">
     https://www.changingfaces.org.uk/Home
   </a>
   </p>
@@ -81,13 +81,13 @@ body_class: "resources"
   <h2>Pain</h2>
 
   <p>
-  <a href="http://www.migrainetrust.org/young-sufferers">
+  <a href="http://www.migrainetrust.org/young-sufferers" target="_blank">
     http://www.migrainetrust.org/young-sufferers
   </a>
   </p>
 
   <p>
-  This page has information booklets with advice how to manage migraines in
+  This page has information booklets with advice on how to manage migraines in
   children and young people.
   </p>
 
@@ -96,23 +96,49 @@ body_class: "resources"
   <h3>Cognitive behaviour therapy</h3>
 
   <p>
-  <a href="http://www.getselfhelp.co.uk/">
+  <a href="http://www.getselfhelp.co.uk/" target="_blank">
     http://www.getselfhelp.co.uk/
   </a>
   </p>
 
   <p>
-  <a href="http://www.cci.health.wa.gov.au/resources/consumers.cfm">
+  A website offering a number of therapeutic resources, mainly CBT focused, for
+  a range of different problems.
+  </p>
+
+  <p>
+  <a href="http://www.cci.health.wa.gov.au/resources/consumers.cfm" target="_blank">
     http://www.cci.health.wa.gov.au/resources/consumers.cfm
   </a>
+  </p>
+
+  <p>
+  A page offering structured self-help CBT programmes addressing a number of
+  different problems.
   </p>
 
   <h3>Mindfulness</h3>
 
   <p>
-  <a href="http://www.getselfhelp.co.uk/mindfulness.htm">
+  <a href="http://www.getselfhelp.co.uk/mindfulness.htm" target="_blank">
     http://www.getselfhelp.co.uk/mindfulness.htm
   </a>
+  </p>
+
+  <p>
+  Contains information about mindfulness, scripts and MP3 downloads for
+  mindfulness exercises and meditations.
+  </p>
+
+  <p>
+  <a href="https://www.headspace.com" target="_blank">
+    https://www.headspace.com
+  </a>
+  </p>
+
+  <p>
+  A website and app with meditation exercises and helpful cartoons explaining
+  the concept of mindfulness.
   </p>
 
   <h2>Professional organisations</h2>
@@ -120,7 +146,7 @@ body_class: "resources"
   <h3>British Psychological Society</h3>
 
   <p>
-  <a href="http://www.bps.org.uk/">
+  <a href="http://www.bps.org.uk/" target="_blank">
     http://www.bps.org.uk/
   </a>
   </p>
@@ -128,7 +154,7 @@ body_class: "resources"
   <h3>Health and Care Professions Council</h3>
 
   <p>
-  <a href="http://www.hcpc-uk.org.uk/">
+  <a href="http://www.hcpc-uk.org.uk/" target="_blank">
     http://www.hcpc-uk.org.uk/
   </a>
   </p>
