--- a/services/neuropsychology.html
+++ b/services/neuropsychology.html
@@ -11,10 +11,10 @@ body_class: "services neuropsychology"
 A neuropsychological assessment can focus on a range of different functions of
 the brain that can affect learning and academic progress, as well as every day
 living skills. This includes areas such as memory, planning and organising
-work, speed of processing and attention. An assessment establishes a child’s
+work, speed of processing and attention. An assessment establishes a child's
 strengths and weaknesses and the assessment report contains recommendations for
-the family and for school. Sometimes the words “cognitive assessments” and
-“neuropsychological assessments” are used interchangeably. A cognitive
+the family and for school. Sometimes the words "cognitive assessments" and
+"neuropsychological assessments" are used interchangeably. A cognitive
 assessment is an assessment of general intellectual functioning (or IQ), which
 includes verbal and perceptual skills, and is an important part of a
 neuropsychological assessment.
@@ -23,7 +23,7 @@ neuropsychological assessment.
 <p>
 Neuropsychological assessments are particularly important for children who have
 suffered from injuries and illnesses that affect the brain, such as a brain
-tumour, stroke, cerebral palsy, brain injury following an accidenta and
+tumour, stroke, cerebral palsy, brain injury following an accident and
 epilepsy. However, children without brain injury can also struggle in school
 and a neuropsychological assessment can help establishing whether the child has
 any underlying cognitive difficulties that affect their academic progress.
