--- a/services/paediatrics.html
+++ b/services/paediatrics.html
@@ -12,8 +12,8 @@ children with conditions that affect the brain. Psychological therapy can
 address a range of different issues related to living with a physical health
 condition, such as accepting a diagnosis, adherence to medical treatment,
 self-esteem issues and pain management. It can also improve quality of life by
-minimising secondary problems related to the illness and by focusing on
-achieving goals and values of the young person.
+reducing the impact of secondary problems related to the illness and by
+focusing on achieving goals and values of the young person.
 </p>
 
 <p>
