--- a/services/assessments.html
+++ b/services/assessments.html
@@ -6,13 +6,13 @@ body_class: "services assessments"
 <h1>Assessments</h1>
 
 <p>
-A psychological assessment focuses on understanding how a problem developed,
+A psychological assessment focuses on understanding how a problem developed and
 what maintains it. It also looks at any exceptions to the problem and what
 children and parents have tried in order to deal with the problem. This
 information contributes to a plan (a so called formulation) of how to deal with
 the problem (the intervention, or therapy).  Whilst an assessment can be
 diagnostic (for example, diagnosing depression), Psychologists are generally
-less concerned with diagnosis and instead specialises in finding an individual
+less concerned with diagnosis and instead specialise in finding an individual
 formulation for every person. This means that an individual treatment plan can
 be developed and a problem can still be addressed even if it does not fit the
 criteria for a specific diagnosis. Any psychological intervention will start
