--- a/services/therapies.html
+++ b/services/therapies.html
@@ -9,16 +9,16 @@ body_class: "services therapies"
 Psychological therapies can be helpful for a range of different emotional and
 behavioural problems. Common psychological problems include anxiety, phobias,
 low mood, Post Traumatic Stress Disorder (PTSD), low self-esteem, anger,
-self-harm and bereavement.
+self-harm and bereavement. Psychological therapy can also address a range of
+different issues related to living with a physical health condition, such as
+accepting a diagnosis, adhering to medical treatment, and managing pain.
 </p>
 
 <p>
-Psychological therapy can also address a range of different issues related to
-living with a physical health condition, such as accepting a diagnosis,
-adherence to medical treatment, and pain management. Therapy will be adapted
-according to the child age and level of cognitive function. The decision which
-therapy to use is made based on the presenting problem, the evidence base for a
-particular therapy for a particular problem and the preferences of the family.
+Therapy will be adapted according to the child age and level of cognitive
+function. The decision which therapy to use is made based on the presenting
+problem, the evidence base for a particular therapy for a particular problem
+and the preferences of the family.
 </p>
 
 <h2>Cognitive Behaviour Therapy (CBT)</h2>
@@ -52,7 +52,7 @@ turn influence the problem.
 <p>
 ACT is a form of cognitive therapy which instead of challenging negative
 thoughts (as in traditional CBT) focuses on accepting that difficult feelings
-and thoughts will be part of peoples’ lives. By learning to stop struggling
+and thoughts will be part of peoples' lives. By learning to stop struggling
 with these thoughts and feelings, they will become less influential and frees
 people up to focus on their values in life and on taking positive action
 despite their difficulties. ACT also emphasises the importance of living
@@ -78,7 +78,7 @@ experiences, thoughts and feelings.
 
 <p>
 Most children and young people who go through a bereavement do not need
-professional input. There is no such thing as a ‘normal’ bereavement and
+professional input. There is no such thing as a 'normal' bereavement and
 children will react differently to a loss. However, if the child has strong
 reactions that continue over time (including drastic behaviour changes), school
 performance is seriously affected, and the child or young people isolate
@@ -90,12 +90,12 @@ the dead person, early professional contact is recommended.
 
 <p>
 Susanna has substantial training and experience in CBT and of adapting this to
-the child’s age or cognitive function. She has successfully used CBT approaches
+the child's age or cognitive function. She has successfully used CBT approaches
 with children presenting with a range of different emotional and behavioural
 difficulties, including low self esteem, anxiety, low mood and anger. She has
-developed her practice in line with new evidence bases and as such incorporates
+developed her practice in line with new evidence and as such incorporates
 Mindfulness and ACT into her work. Since a child is inevitably affected by the
 context in which they are living, Susanna will always incorporate systemic
-therapy elements into her interventions. Her current work with children with
+therapy elements into her interventions. Her work in the NHS with children with
 cancer means that she regularly meets bereaved children and adults.
 </p>
