--- a/about.html
+++ b/about.html
@@ -35,10 +35,10 @@ body_class: "about"
   Susanna is committed to providing an evidence-based service and since
   qualifying, she has kept abreast with new research and developed new skills
   through further training in order to ensure that her practice is continuously
-  developing. However, she is also highly conscious of the importance of the
-  therapeutic relationship and her uttermost aim is to provide a child-friendly
-  service, whilst also acknowledging the needs of all family members. Susanna
-  is innovative in her approach and uses a range of creative ideas to engage
+  developing. She is also highly conscious of the importance of the therapeutic
+  relationship and her uttermost aim is to provide a child-friendly service,
+  whilst also acknowledging the needs of all family members. Susanna is
+  innovative in her approach and uses a range of creative ideas to engage
   children and young people.
   </p>
 
