--- a/appointments-and-fees.html
+++ b/appointments-and-fees.html
@@ -8,32 +8,9 @@ body_class: "appointments"
 
   <h2>Appointments</h2>
 
-  <p>Appointments are offered at two East London locations:</p>
+  <p>Susanna is currently not able to accept any new clients for psychological therapy. Please contact Susanna via e-mail if you are interested in a neuropsychological assessment or if your enquiry is regarding neuro rehabilitation work.</p>
 
-  <p>
-  <em>Liverpool Street/Old Street</em><br>
-  The Gestalt Centre<br>
-  96-100 Clifton Street<br>
-  London EC2A 4TP
-  </p>
-
-  <p>
-  <em>Canary Wharf</em><br>
-  Barkantine Practice<br>
-  121 Westferry Road<br>
-  London, E14 8JH
-  </p>
-
-  <p>
-  Appointments at home and in schools can also be offered, but charges for travel
-  time may be added.
-  </p>
-
-  <p>
-  Appointment times are generally available Thursday, Friday and Saturday, in
-  the day as well as the evenings. Appointments via Skype or telephone
-  consultations can also be arranged.
-  </p>
+  <p>Susanna is based in South London.</p>
 
   <h2>Fees</h2>
 
